--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 
         <div>
             <button>New</button>
-            <img src=" images/p2.png" alt="" width="79px">
+            <img src="Images/p2.png" alt="" width="79px">
             <div class="pricing">
                 <h4> Watch</h4>
                 <h4>Price <span style="color: rgb(238, 154, 154);">$300</span></h4>
@@ -473,7 +473,7 @@
 
         <div>
             <button>New</button>
-            <img src=" images/p4.png" alt="" width="162px">
+            <img src="Images/p4.png" alt="" width="162px">
             <div class="pricing">
                 <h4> Flower Bouquet</h4>
                 <h4>Price <span style="color: rgb(248, 144, 144);">$45</span></h4>
@@ -491,7 +491,7 @@
         </div>
         <div>
             <button>New</button>
-            <img src="images/p6.png" alt="" width="125.15px">
+            <img src="Images/p6.png" alt="" width="125.15px">
             <div class="pricing">
                 <h4>Flower Bouquet</h4>
                 <h4>Price <span style="color: rgb(250, 133, 133);">$70</span></h4>
@@ -499,7 +499,7 @@
         </div>
         <div>
             <button>New</button>
-            <img src="images/p7.png" alt="" width="109px">
+            <img src="Images/p7.png" alt="" width="109px">
             <div class="pricing">
                 <h4> watch </h4>
                 <h4>Price <span style="color: rgb(247, 130, 130);">$400</span></h4>
@@ -507,7 +507,7 @@
         </div>
         <div>
             <button>New</button>
-            <img src="images/p8.png" alt="" width="100px">
+            <img src="Images/p8.png" alt="" width="100px">
             <div class="pricing">
                 <h4> Ring </h4>
                 <h4>Price <span style="color: rgb(249, 134, 134);">$450</span></h4>
@@ -521,7 +521,7 @@
 
     <button class="btn"> View All Products</button>
     <div class="blue-box">
-        <img src="images/saving-img.png" alt="">
+        <img src="Images/saving-img.png" alt="">
         <div class="head">
             <h1>BEST SAVINGS ON <br> NEW ARRIVALS </h1>
             <p> Qui ex dolore at repellat, quia neque doloribus omnis <br>adipisci, ipsum eos odio fugit ut eveniet
@@ -541,21 +541,21 @@
         </div>
         <div class="benifits-2">
             <div>
-                <img src="images/truck.svg" alt="" height="55px" width="55px">
+                <img src="Images/truck.svg" alt="" height="55px" width="55px">
                 <h5>
                     <center>Fast Delivery </center>
                 </h5>
                 <p>variations of passages of Lorem Ipsum <br> <center>available</center></p>
             </div>
             <div>
-                <img src="images/free.svg" alt="" height="55px" width="55px">
+                <img src="Images/free.svg" alt="" height="55px" width="55px">
                 <h5>
                     <center> Free shipping </center>
                 </h5>
                 <p>variations of passages of Lorem Ipsum <br> <center>available</center></p>
             </div>
             <div>
-                <img src="images/high-quality.svg" alt="" height="55px" width="55px">
+                <img src="Images/high-quality.svg" alt="" height="55px" width="55px">
                 <h5>
                     <center> Best Quality</center>
                 </h5>
@@ -567,7 +567,7 @@
         <!-- pinkbox -->
 
 
-        <div class="box-2"> <img src="images/gifts.png" alt="" height="483px" width="421px">
+        <div class="box-2"> <img src="Images/gifts.png" alt="" height="483px" width="421px">
             <div class="text">
                 <h2>GIFT FOR YOUR <br> LOVED ONES </h2>
                 <p>Omnis ex nam laudantium odit illum harum, excepturi accusamus at corrupti, velit blanditiis <br>unde
@@ -612,7 +612,7 @@
                 and a search for 'lorem ipsum' will uncover <br> many web sites still in their infancy. Variouseditors now
                 use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will <br> uncover many web sites
                 still in their infancy. Various </p>
-                <span> <img src="images/icons8-quote-90.png" alt="" height="30px" width="30px"></span>
+                <span> <img src="Images/icons8-quote-90.png" alt="" height="30px" width="30px"></span>
         </div>
         <button class="l">< </button> 
         <button class="r"> ></button>
@@ -651,11 +651,11 @@
                 </div>
                 <div class="contact-1">
                     <h3> CONTACT US </h3>
-                    <img src="images/icons8-location-24.png" alt="">
+                    <img src="Images/icons8-location-24.png" alt="">
                     <p>GB raod London UK</p>
-                    <img src="images/icons8-call-30.png" alt="">
+                    <img src="Images/icons8-call-30.png" alt="">
                     <p>+01 12345678901</p>
-                    <img src="images/icons8-mail-24.png" alt="">
+                    <img src="Images/icons8-mail-24.png" alt="">
                     <p>Demo@gmailcom</p>
                 </div>
             </div>
