--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       
     <!-- pink box -->
 
-    <div class="box-1"> <img src="IMAGES/slider-img.png" alt="">
+    <div class="box-1"> <img src="Images/slider-img.png" alt="">
         <h1>Welcome to our <br> Gift Shop </h1>
         <p>Sequi perspiciatis nulla reiciendis, rem, tenetur impedit, eveniet non necessitatibus error <br>
             distinctio mollitia suscipit. Nostrum fugit doloribus consequatur distinctio esse, possimus <br>
