--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         </div>
         <div>
             <button>New</button>
-            <img src="images/p3.png" alt="" width="136px">
+            <img src="Images/p3.png" alt="" width="136px">
             <div class="pricing">
                 <h4> Teddy Bear</h4>
                 <h4>Price <span style="color: rgb(247, 169, 169);">$110</span></h4>
@@ -483,7 +483,7 @@
     <div class="products-1">
         <div>
             <button>New</button>
-            <img src=" images/p5.png" alt="" width="132.5px">
+            <img src=" Images/p5.png" alt="" width="132.5px">
             <div class="pricing">
                 <h4>Teddy Bear</h4>
                 <h4>Price <span style="color: rgb(243, 139, 139);">$95</span></h4>
@@ -623,10 +623,10 @@
 
         <footer>
             <div class="icon">
-                <img width="24" height="13" src="images/icons8-f-30.png" alt="facebook-f" />
-                <img width="24" height="22" src="images/icons8-twitter-bird-50.png" alt="twitter" />
-                <img width="24" height="20" src="images/icons8-insta-50.png" alt="instagram-new--v1" />
-                <img width="50" height="50" src="images/icons8-youtube-30.png" alt="youtube--v1" />
+                <img width="24" height="13" src="Images/icons8-f-30.png" alt="facebook-f" />
+                <img width="24" height="22" src="Images/icons8-twitter-bird-50.png" alt="twitter" />
+                <img width="24" height="20" src="Images/icons8-insta-50.png" alt="instagram-new--v1" />
+                <img width="50" height="50" src="Images/icons8-youtube-30.png" alt="youtube--v1" />
             </div>
             <div class="main">
                 <div>
